move to device motion practice

--- a/views/device_motion.haml
+++ b/views/device_motion.haml
@@ -2,7 +2,8 @@
 %html
   %head
     %title Device Motion
-    %link(href="/assets/application.css" rel="stylesheet" type="text/css" media="screen")
+    %link(href="/assets/application.css"   rel="stylesheet" type="text/css" media="screen")
+    %link(href="/assets/device_motion.css" rel="stylesheet" type="text/css" media="screen")
   %body
     #acce_panel.panel
       %h1 Device Motion
@@ -80,4 +81,4 @@
           %p
             %label z
             %span#moz_orientation_z
-    %script(type="text/javascript" src="/assets/application.js")
+    %script(type="text/javascript" src="/assets/device_motion.js")
