--- a/views/device_motion.haml
+++ b/views/device_motion.haml
@@ -65,6 +65,11 @@
           %p
             %label absolute
             %span#device_orientation_absolute
+        .function_panel
+          %h2 window.Orientation
+          %p
+            %label window.orientation
+            %span#window_orientation
     #moz_orientation_panel.panel
       %h1 Moz Device Orientation
       .no
