avoid undefined exception

--- a/views/device_motion.haml
+++ b/views/device_motion.haml
@@ -12,40 +12,40 @@
       .yes
         .function_panel
           %h2 Update interval
-          %p#acce_update_interval
+          %p#acce_update_interval -
         .function_panel
           %h2 Acceleration Including Gravity
           %p
             %label x
-            %span#acce_acceleration_including_gravity_x
+            %span#acce_acceleration_including_gravity_x -
           %p
             %label y
-            %span#acce_acceleration_including_gravity_y
+            %span#acce_acceleration_including_gravity_y -
           %p
             %label z
-            %span#acce_acceleration_including_gravity_z
+            %span#acce_acceleration_including_gravity_z -
         .function_panel
           %h2 Acceleration
           %p
             %label x
-            %span#acce_acceleration_x
+            %span#acce_acceleration_x -
           %p
             %label y
-            %span#acce_acceleration_y
+            %span#acce_acceleration_y -
           %p
             %label z
-            %span#acce_acceleration_z
+            %span#acce_acceleration_z -
         .function_panel
           %h2 Rotation rate
           %p
             %label alpha
-            %span#acce_rotation_alpha
+            %span#acce_rotation_alpha -
           %p
             %label beta
-            %span#acce_rotation_beta
+            %span#acce_rotation_beta -
           %p
             %label gamma
-            %span#acce_rotation_gamma
+            %span#acce_rotation_gamma -
     #orientation_panel.panel
       %h1 Device Orientation
       .no
@@ -55,21 +55,21 @@
           %h2 DeviceOrientation
           %p
             %label alpha
-            %span#device_orientation_alpha
+            %span#device_orientation_alpha -
           %p
             %label beta
-            %span#device_orientation_beta
+            %span#device_orientation_beta -
           %p
             %label gamma
-            %span#device_orientation_gamma
+            %span#device_orientation_gamma -
           %p
             %label absolute
-            %span#device_orientation_absolute
+            %span#device_orientation_absolute -
         .function_panel
           %h2 window.Orientation
           %p
             %label window.orientation
-            %span#window_orientation
+            %span#window_orientation -
     #moz_orientation_panel.panel
       %h1 Moz Device Orientation
       .no
@@ -79,11 +79,11 @@
           %h2 MozDeviceOrientation
           %p
             %label x
-            %span#moz_orientation_x
+            %span#moz_orientation_x -
           %p
             %label y
-            %span#moz_orientation_y
+            %span#moz_orientation_y -
           %p
             %label z
-            %span#moz_orientation_z
+            %span#moz_orientation_z -
     %script(type="text/javascript" src="/assets/device_motion.js")
