add last update time

--- a/views/device_motion.haml
+++ b/views/device_motion.haml
@@ -10,6 +10,9 @@
       .no
         %p Don't support acce
       .yes
+        %p
+          %label last update time
+          %span#acce_update_time -
         .function_panel
           %h2 Update interval
           %p#acce_update_interval -
@@ -51,6 +54,9 @@
       .no
         %p Don't support Orientation
       .yes
+        %p
+          %label last update time
+          %span#device_orientation_update_time -
         .function_panel
           %h2 DeviceOrientation
           %p
@@ -75,6 +81,9 @@
       .no
         %p Don't support MozOrientation
       .yes
+        %p
+          %label last update time
+          %span#moz_orientation_update_time -
         .function_panel
           %h2 MozDeviceOrientation
           %p
