--- a/views/device_motion.haml
+++ b/views/device_motion.haml
@@ -18,37 +18,55 @@
           %p#acce_update_interval -
         .function_panel
           %h2 Acceleration Including Gravity
-          %p
+          %div
             %label x
             %span#acce_acceleration_including_gravity_x -
-          %p
+            .counter
+              #acce_acceleration_including_gravity_x_counter
+          %div
             %label y
             %span#acce_acceleration_including_gravity_y -
-          %p
+            .counter
+              #acce_acceleration_including_gravity_y_counter
+          %div
             %label z
             %span#acce_acceleration_including_gravity_z -
+            .counter
+              #acce_acceleration_including_gravity_z_counter
         .function_panel
           %h2 Acceleration
-          %p
+          %div
             %label x
             %span#acce_acceleration_x -
-          %p
+            .counter
+              #acce_acceleration_x_counter
+          %div
             %label y
             %span#acce_acceleration_y -
-          %p
+            .counter
+              #acce_acceleration_y_counter
+          %div
             %label z
             %span#acce_acceleration_z -
+            .counter
+              #acce_acceleration_z_counter
         .function_panel
           %h2 Rotation rate
-          %p
+          %div
             %label alpha
             %span#acce_rotation_alpha -
-          %p
+            .counter
+              #acce_rotation_alpha_counter
+          %div
             %label beta
             %span#acce_rotation_beta -
-          %p
+            .counter
+              #acce_rotation_beta_counter
+          %div
             %label gamma
             %span#acce_rotation_gamma -
+            .counter
+              #acce_rotation_gamma_counter
     #orientation_panel.panel
       %h1 Device Orientation
       .no
@@ -59,16 +77,22 @@
           %span#device_orientation_update_time -
         .function_panel
           %h2 DeviceOrientation
-          %p
+          %div
             %label alpha
             %span#device_orientation_alpha -
-          %p
+            .counter
+              #device_orientation_alpha_counter
+          %div
             %label beta
             %span#device_orientation_beta -
-          %p
+            .counter
+              #device_orientation_beta_counter
+          %div
             %label gamma
             %span#device_orientation_gamma -
-          %p
+            .counter
+              #device_orientation_gamma_counter
+          %div
             %label absolute
             %span#device_orientation_absolute -
         .function_panel
